@@ -1,3 +1,4 @@
+  - fix handling of hashed opening php-tags inside strip-blocks (messju)
   - change escape:url use rawurlencode() instead of urlencode() (messju)
   - make $smarty.const.FOO compile to "FOO", and not to "constant('foo')".
     this is less code and a little faster execution. note that undefined
